--- a/mission/package.json
+++ b/mission/package.json
@@ -14,10 +14,11 @@
     "@fortawesome/free-regular-svg-icons": "^5.15.4",
     "@fortawesome/free-solid-svg-icons": "^5.15.4",
     "@fortawesome/vue-fontawesome": "^3.0.0-5",
+    "axios": "^0.25.0",
     "core-js": "^3.6.5",
     "vue": "^3.0.0",
     "vue-router": "^4.0.0-0",
-    "vuex": "^4.0.0-0",
+    "vuex": "^4.0.2",
     "w3-css": "^4.1.0"
   },
   "devDependencies": {
